@@ -1,6 +1,6 @@
 ;;; eev-tlinks.el --- hyperlinks to temporary buffers generated by templates  -*- lexical-binding: nil; -*-
 
-;; Copyright (C) 2013-2022 Free Software Foundation, Inc.
+;; Copyright (C) 2013-2023 Free Software Foundation, Inc.
 ;;
 ;; This file is part of GNU eev.
 ;;
@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20221227
+;; Version:    20230104
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eev-tlinks.el>
@@ -134,6 +134,7 @@
 ;; «.find-angg-es-links»		(to "find-angg-es-links")
 ;; «.find-1stclassvideo-links»		(to "find-1stclassvideo-links")
 ;; «.find-1stclassvideoindex»		(to "find-1stclassvideoindex")
+;; «.find-1stclassvideolsubs»		(to "find-1stclassvideolsubs")
 ;; «.find-1stclassvideodef»		(to "find-1stclassvideodef")
 ;; «.find-1stclassvideos»		(to "find-1stclassvideos")
 ;;   «.1c»				(to "1c")
@@ -3293,7 +3294,9 @@ For more info on this particular video, run:
 ;; If you don't have a local copy of its subtitles, or if you
 ;; want to update the local copy of the subtitles, run this:
 ;;        (find-psne-1stclassvideo-links \"{c}\")
-;;    or: (find-psne-eevvideo-links \"{mp4stem}\" \"{exts}\")\n"))
+;;    or: (find-psne-eevvideo-links \"{mp4stem}\" \"{exts}\")
+;;
+;; LSubs: (find-1stclassvideolsubs \"{c}\")\n"))
     (if mp4found
 	(if hassubs
 	    (ee-template0 template11)
@@ -3306,18 +3309,27 @@ For more info on this particular video, run:
 
 
 ;; «find-1stclassvideoindex»  (to ".find-1stclassvideoindex")
+;; «find-1stclassvideolsubs»  (to ".find-1stclassvideolsubs")
 ;; «find-1stclassvideodef»    (to ".find-1stclassvideodef")
 ;; Tests: (find-1stclassvideoindex "2022findeevangg")
 ;;        (find-1stclassvideoindex "2022findelispintro")
+;;        (find-1stclassvideolsubs "2022findeevangg" "nice -")
 ;;        (find-1stclassvideodef   "2022findelispintro")
 ;;
 (defun find-1stclassvideoindex (c &rest pos-spec-list)
   (interactive (list (ee-1stclassvideo-around-point-ask)))
   (apply 'find-anggwgeta-elisp ".emacs.videos" c pos-spec-list))
 
+(defun find-1stclassvideolsubs (c &rest pos-spec-list)
+  (interactive (list (ee-1stclassvideo-around-point-ask)))
+  (let ((mp4stem (ee-1stclassvideos-mp4stem c)))
+    (apply 'find-anggwget-elisp (format "SUBTITLES/%s.lua" mp4stem)
+	   pos-spec-list)))
+
 (defun find-1stclassvideodef (c &rest pos-spec-list)
   (interactive (list (ee-1stclassvideo-around-point-ask)))
   (apply 'find-eev "eev-videolinks.el" c pos-spec-list))
+
 
 ;; «find-1stclassvideos»  (to ".find-1stclassvideos")
 ;; Test: (find-1stclassvideos)
